Updated runner shell script and path finder classes